<resources>
    <string name="app_name">MexiCrédi</string>
    <string name="tips_dia_content">Tenga en cuenta que con el fin de evaluar mejor su elegibilidad para utilizar el servicio MexiCrédi, tenemos que ejecutar un modelo de riesgo y calcular la cantidad que usted puede pedir prestado que coincida con sus calificaciones mediante la obtención de la siguiente información Toda la información obtenida por MexiCrédi será recopilada y enviada a través de la última tecnología de seguridad HTTPS y sólo se utilizará para evaluar la cantidad que usted puede pedir prestado, no vamos a compartir sus datos personales. personales. De acuerdo con la ley mexicana y las regulaciones de Google, MexiCrédi respetará y protegerá la privacidad de la información que compartas con nosotros durante la evaluación de tu solicitud de préstamo, y si no utilizas MexiCrédi por un largo periodo de tiempo, evaluaremos periódicamente y borraremos completamente tus datos
La siguiente información será accesada y retenida por nosotros para calcular la cantidad que puede ser prestada de acuerdo a sus calificaciones
\n\n1. Información telefónica de contacto
\n\nCuando nos conceda acceso a la agenda de direcciones, recopilaremos todos los contactos de su agenda telefónica, incluyendo el nombre del contacto telefónico, el número de teléfono y la fecha en que se añadió el contacto. El objetivo de esta recopilación es construir su perfil crediticio mediante el análisis de la agenda telefónica y aumentar el número de formas en las que se puede contactar con usted. Además, esta información se utilizará para servicios antifraude en los que sea necesaria para el análisis de riesgos y, una vez finalizada la evaluación, los datos se eliminarán de nuestros servidores. La lista de contactos completa no se controlará, almacenará ni compartirá con terceros.
\n\n2. Sistema de Posicionamiento Global (GPS)
\n\nSiempre que utilice la App a través de su dispositivo móvil, rastrearemos y recopilaremos información sobre su ubicación geográfica en tiempo real. En algunos casos, podemos pedirle que active el Sistema de Posicionamiento Global (GPS) en su dispositivo móvil para permitirnos ofrecerle una mejor experiencia de uso de la App. Puede optar por desactivar temporalmente la información de seguimiento de geolocalización en su dispositivo móvil en cualquier momento.
\n\n3. Información sobre las aplicaciones instaladas
\n\nMexiCrédi recoge, almacena y monitoriza y carga información de metadatos sobre cada aplicación instalada, incluyendo los nombres de todas las aplicaciones y paquetes instalados en su dispositivo, cuándo fueron instalados y actualizados, el nombre de la versión y el código de la versión. Utilizamos esta información para evaluar su solvencia y evitar fraudes en los préstamos. MexiCrédi nunca compartirá estos datos con terceros sin su permiso. Sólo se recopilarán con su consentimiento. Sólo se utilizará para analizar su elegibilidad de préstamo, recomendar productos de préstamo adecuados para usted, gestión de riesgos y prevención del fraude, y para ningún otro propósito sin su permiso.
\n\n4. Registros de mensajes de texto
\n\nCuando presente una solicitud de préstamo, registraremos el contenido de todos los mensajes de texto, pero sólo procesaremos los mensajes de texto relacionados con la financiación. La información recopilada incluye el remitente, la fecha de envío y la descripción, lo que nos ayuda a identificar las distintas cuentas que posee el usuario y los patrones de flujo de caja del usuario para ayudarnos a identificar distintos perfiles de riesgo y proporcionarle una evaluación adecuada de la puntuación crediticia. No podrá utilizarse para ningún otro fin sin su permiso.
\n\n5. Cámaras
\n\nMexiCrédi puede pedirle que utilice su cámara para enviar un selfie o una imagen en vivo de su cara con el fin de proporcionarle una experiencia fácil/suave. Esto es para verificar su identidad y evitar que otros roben su información personal para fraude de préstamos.
\n\n6. Calendario
\n\nMexiCrédij recopilará y controlará la información relacionada con tus habilidades en la solicitud y la subirá encriptada con el fin de identificar y analizar tu comportamiento, orientar el riesgo de préstamos múltiples, evaluar si el préstamo puede ser procesado y ayudar a prevenir el fraude.
\n\n7. Datos personales recogidos con fines de tratamiento
\n\nDe conformidad con lo anterior, le informamos que al solicitar a través de MexiCrédi y proporcionar sus datos personales para acceder a los servicios crediticios de MexiCrédi, MexiCrédi tendrá acceso directo o indirecto a sus datos personales y se compromete a procesar sus datos personales en la forma descrita anteriormente, de la siguiente manera:
\n\ta) datos de identificación
\n\tb) datos de contacto
\n\tc) datos profesionales
\n\td) datos financieros
\n\te) información de su teléfono móvil y/o aplicación. Esto incluye, pero no se limita a, información relativa a su servicio móvil, incluyendo: i) operador; ii) hábitos de consumo; iii) marca y modelo de teléfono; y iv) aplicaciones.
\n\tf) Wifi e Internet, tipo de teléfono, memoria, información sobre la tarjeta de memoria, CPU, GAID, dirección Mac, etc.
\n\nEstos datos pueden utilizarse para evaluar la información crediticia que solicite, verificar su identidad, evaluar y calificar su solvencia y con fines de gestión de riesgos. Toda la información que obtenemos sólo puede obtenerse sobre la base de su consentimiento y autorización. Como parte de su uso del servicio MexiCrédi, actualizaremos periódicamente la información a la que nos ha autorizado a acceder. Puede leer el acuerdo de privacidad completo en MexiCrédi
</string>
    <string name="tips_dia_cancel">Cancelar</string>
    <string name="tips_dia_confirm">Aceptar</string>
    <string name="update_dia_title">xxxxxxxxx</string>
    <string name="update_next">Rechazada</string>
    <string name="update_now">De acuerdo</string>
    <string name="selector_hint">Por favor elige</string>
    <string name="input_hint">Por favor completa</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="estado_civil">Estado civil</string>
    <string name="fuente_de_ingresos">Fuente de ingresos</string>
    <string name="select_province">Por favor, elija la provincia</string>
    <string name="select_city">Por favor, elija la ciudad</string>
    <string name="numero_telefono">Número de teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="relación">Relación</string>
    <string name="selector_error_hint">Por favor elige %s</string>
    <string name="input_error_hint">Por favor completa %s</string>
    <string name="internationall_number">+51</string>
    <string name="permission_hint">Necesidad de conceder competencias</string>
    <string name="home_title">@string/app_name</string>
    <string name="banner_content">Préstamo Confiable y\n Transparente</string>
    <string name="apply">Aplicar</string>
    <string name="cycle_days">Días de préstamo</string>
    <string name="rate">Tipo de interés</string>
    <string name="over_due">Atrasado</string>
    <string name="open_app">Descargar La APP</string>
    <string name="text_divider">Recomendado para usted</string>
    <string name="his">Récord de préstamo</string>
    <string name="card">Tarjeta bancaria</string>
    <string name="verifi">Datos personales</string>
    <string name="privacy">Ley de Protección de Datos</string>
    <string name="my">Sobre nosotros</string>
    <string name="feedback">Añadir comentario</string>
    <string name="us_order_des_not">Tiene un pedido atrasado, por favor, pague lo antes posible.</string>
    <string name="us_order_des">Le queda orden de préstamo para pagar, por favor, revíselo ahora.</string>
    <string name="mine_his">Mi préstamo</string>
    <string name="mine_card">Cuenta bancaria</string>
    <string name="mine_verifi">Información personal</string>
    <string name="mine_privacy">Acuerdo de Privacidad</string>
    <string name="mine_my">Sobre nosotros</string>
    <string name="mine_feedback">Comentarios</string>
    <string name="his_title">Factura</string>
    <string name="loan_amount">Cantidad prestada</string>
    <string name="loan_period">Período</string>
    <string name="loan_cycle">Días de préstamo</string>
    <string name="request_date">Tiempo de solicitud</string>
    <string name="on_reviewing">Verificando</string>
    <string name="refused">Auditoría fallida</string>
    <string name="reviewing_pass">Revisión aprobada</string>
    <string name="on_reviewing_des">1 minuto como mínimo, por favor espere pacientemente</string>
    <string name="refused_des">Podría volver a intentarlo después de 7 días</string>
    <string name="reviewing_pass_des">La acreditación de fondos está en curso, por favor, vigile el cambio del saldo de la cuenta</string>
    <string name="overdue_days">%d días de retraso</string>
    <string name="repay">Reembolsar</string>
    <string name="expand">Retrasar el reembolso</string>
    <string name="no_order_tips">Actualmente no le queda\nningún préstamo por pagar.</string>
    <string name="his_to_apply">Prestar</string>
    <string name="cards">Cuenta bancaria</string>
    <string name="add_cards">Añadir cuenta bancaria</string>
    <string name="no_any_cards_tips">No ha agregado ninguna tarjeta bancaria</string>
    <string name="personal_message">Datos personales</string>
    <string name="work_message">Información laboral</string>
    <string name="contract_message">Datos de contactos</string>
    <string name="id_message">Datos de identidad</string>
    <string name="card_message">Cuenta bancaria</string>
    <string name="all_message">Información personal</string>
    <string name="apply_now">Solicitar ahora</string>
    <string name="about_us_title">Sobre nosotros</string>
    <string name="company_name">公司名</string>
    <string name="company_des">公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍公司介绍</string>
    <string name="logout">Cancelación</string>
    <string name="logout_dialog_des">¿Estás seguro de que quiere abandonarlo ahora?</string>
    <string name="logout_dialog_cancel">Cancelar</string>
    <string name="logout_dialog_confirm">Confirmar salida</string>
    <string name="login_page_title">@string/app_name</string>
    <string name="guding_52">+52</string>
    <string name="input_phone_number_tips">Introduzca el número de teléfono correcto</string>
    <string name="privacy_tips">He leído y acepto el la </string>
    <string name="privacy_tips_clicked">Política de Privacidad</string>
    <string name="agree_tips">Por favor lea y acepte la Política de Privacidad</string>
    <string name="send_vcode_tips">Se ha enviado el código de verificación por SMS al +%s</string>
    <string name="send">Enviar</string>
    <string name="login">Login</string>
    <string name="continuar">Continuar</string>
    <string name="confirm">Confirmar</string>
    <string name="abandon">Abandonar</string>
    <string name="send_voice_code">Obtener un código de verificación de voz</string>
    <string name="send_voice_code_on_clock">Obtener un código de verificación de voz(%2d)</string>
    <string name="photo_select">Seleccionar del album</string>
    <string name="camera_select">Grabar</string>
    <string name="dia_cus_know">Entiendo</string>
    <string name="dia_bank_name">Nombre del banco :</string>
    <string name="dia_bank_content">La tarjeta bancaria fue enlazada por los otros, por favor cambie otra tarjeta:</string>
    <string name="dia_bank_warning">*Para poder solicitar prestamo con exito, asegurese de que su informacion de cuenta es valida</string>
    <string name="dia_pay_think_again">Estoy pensando</string>
    <string name="dia_pay_code_prevent">Se generará intereses de penalización al superar la fecha de vencimiento. \nPor favor, pague lo antes posible.</string>
</resources>