<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_cancel"
        android:background="@drawable/white_10">

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera_select"
            android:textSize="14sp"
            android:paddingVertical="22dp"
            android:textColor="@color/gray_333333"
            android:gravity="center"/>

        <View
            android:id="@+id/tv_divder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_f5f5f5"/>

        <TextView
            android:id="@+id/tv_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_select"
            android:textSize="14sp"
            android:paddingVertical="22dp"
            android:textColor="@color/gray_333333"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textSize="14sp"
        android:paddingVertical="22dp"
        android:textColor="@color/gray_333333"
        android:gravity="center"
        android:background="@drawable/white_10"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>