<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/m_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/service_menu"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/SimpleToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_page_title" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/m_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="37dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray_333333"
        android:textSize="14sp"
        android:text="xxxxxxxxxxxxxxxxxxxxxxxxx\nxxxxxxxxx"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

    <TextView
        android:id="@+id/tv_send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/gray_532e00"
        android:layout_marginTop="15dp"
        android:paddingVertical="9dp"
        android:paddingHorizontal="23dp"
        android:text="@string/send"
        android:background="@drawable/yellow_8"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--验证码输入-->
    <!--验证码输入 end -->
    <TextView
        android:id="@+id/tv_send_voice_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="37dp"
        android:layout_marginTop="90dp"
        android:text="@string/send_voice_code"
        android:textColor="@color/yellow_f6c93d"
        app:layout_constraintTop_toBottomOf="@id/tv_send_sms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:paddingVertical="11dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/login"
        android:gravity="center"
        android:enabled="false"
        android:background="@drawable/login_button"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_send_voice_code"/>

</androidx.constraintlayout.widget.ConstraintLayout>