<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_10"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="19dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_logout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/gray_333333"
            android:text="@string/logout_dialog_des"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingVertical="11dp"
            android:background="@drawable/yellow_8"
            android:textColor="@color/gray_532e00"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_logout_title"/>

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingVertical="11dp"
            android:textColor="@color/gray_532e00"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_cancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>