<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_dia_prevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="10dp"
        android:paddingTop="70dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/white_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_333333"
            android:textSize="16sp"
            android:text="@string/dia_pay_code_prevent"/>

        <TextView
            android:id="@+id/tv_i_know"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_cus_know"
            android:background="@drawable/yellow_8"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:textColor="@color/gray_532e00"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_think_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_pay_think_again"
            android:layout_marginTop="10dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:textColor="@color/gray_999999"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-35dp"
        android:src="@mipmap/tishishuoming"
        app:layout_constraintBottom_toTopOf="@id/container_dia_prevent"/>

</androidx.constraintlayout.widget.ConstraintLayout>