<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_10"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="end"
            android:src="@mipmap/chahao"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_666666"
                android:text="@string/dia_bank_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_00b938"
                android:text="xxxxx"
                android:textStyle="bold"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia_bank_content"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="22dp"
            android:textColor="@color/gray_666666"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_bank_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="xxxxxxxxxx"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/orange_8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textSize="10sp"
            android:textColor="@color/red_f06047"
            android:text="@string/dia_bank_warning"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:paddingVertical="11dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/confirm"
            android:textColor="@color/gray_532e00"
            android:gravity="center"
            android:background="@drawable/yellow_8"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>